fix: gulp tasker config fixed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://ulyagram77.github.io/PortfolioDev",
+    "homepage": "https://ulyagram77.github.io/X-OPEN_Landing",
     "name": "portfolio_starter",
     "version": "1.0.0",
     "description": "",
